@@ -1,4 +1,4 @@
-/*	$NetBSD: main.c,v 1.178 2010/04/14 16:16:17 sjg Exp $	*/
+/*	$NetBSD: main.c,v 1.179 2010/04/20 17:18:08 sjg Exp $	*/
 
 /*
  * Copyright (c) 1988, 1989, 1990, 1993
@@ -69,7 +69,7 @@
  */
 
 #ifndef MAKE_NATIVE
-static char rcsid[] = "$NetBSD: main.c,v 1.178 2010/04/14 16:16:17 sjg Exp $";
+static char rcsid[] = "$NetBSD: main.c,v 1.179 2010/04/20 17:18:08 sjg Exp $";
 #else
 #include <sys/cdefs.h>
 #ifndef lint
@@ -81,7 +81,7 @@ __COPYRIGHT("@(#) Copyright (c) 1988, 1989, 1990, 1993\
 #if 0
 static char sccsid[] = "@(#)main.c	8.3 (Berkeley) 3/19/94";
 #else
-__RCSID("$NetBSD: main.c,v 1.178 2010/04/14 16:16:17 sjg Exp $");
+__RCSID("$NetBSD: main.c,v 1.179 2010/04/20 17:18:08 sjg Exp $");
 #endif
 #endif /* not lint */
 #endif
@@ -932,7 +932,7 @@ main(int argc, char **argv)
 	    p1 = argv[0];
 	} else {
 	    p1 = realpath(argv[0], mdpath);
-	    if (!p1 || *p1 != '/') {
+	    if (!p1 || *p1 != '/' || stat(p1, &sb) < 0) {
 		p1 = argv[0];		/* realpath failed */
 	    }
 	}
