@@ -1,7 +1,19 @@
-# $Id: export-all,v 1.1.1.1 2007/10/08 20:30:12 sjg Exp $
+# $Id: export-all,v 1.1.1.2 2010/04/21 04:26:14 sjg Exp $
 
 UT_OK=good
 UT_F=fine
+
+# the old way to do :tA
+M_tAbad = C,.*,cd & \&\& 'pwd',:sh
+# the new
+M_tA = tA
+
+here := ${.PARSEDIR}
+
+# this will cause trouble (recursing if we let it)
+UT_BADDIR = ${${here}/../${here:T}:L:${M_tAbad}:T}
+# this will be ok
+UT_OKDIR = ${${here}/../${here:T}:L:${M_tA}:T}
 
 .export
 
